# py-arib-parser

./: .gitignore  README.md  dockerfile  pyproject.toml
scripts/: cli.py
src/py_arib_parser/: __init__.py
src/py_arib_parser/core/: __init__.py  dataclass.py  parser.py
src/py_arib_parser/utils/: __init__.py  loader.py  logging.py  normalize.py
