[project]
name = "py-arib-parser"
description = "Add your description here"
authors = [
    { name = "yuta0306", email = "yuta.20010306@gmail.com" }
]
dependencies = [
]
readme = "README.md"
requires-python = ">= 3.8"
dynamic = ["version"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black>=23.7.0",
    "mypy>=1.5.1",
    "isort>=5.12.0",
    "pytest>=7.4.0",
    "flake8>=5.0.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path="src/py_arib_parser/__init__.py"

[tool.rye.scripts]
cli = { call = "scripts.cli:cli" }
